force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <label>BT Receipt (AR)</label>
    <nameField>
        <displayFormat>ARR-{00000}</displayFormat>
        <label>Receipt #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>