force-app/main/default/objects/Receipt__c/fields/Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Posting_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>