force-app/main/default/objects/Receipt__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Receipt</fullName>
                <default>true</default>
                <label>Customer Receipt</label>
            </value>
            <value>
                <fullName>Initial Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vendor Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>