force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Receipt__c</columns>
    <columns>Billing__c</columns>
    <columns>Amount__c</columns>
    <columns>Posting_Status__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>